(feat) configuration using Java's service loader
Additional rewrite of library.

fixes issue #7